--- a/style/style.css
+++ b/style/style.css
@@ -1,35 +1,96 @@
 
-*{
-    margin: 10px;
-    outline: none;
-    padding: 0;
-    box-sizing: border-box;
-    transition: 0.3s ease;
-    letter-spacing: 1px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+body {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+        
 }
 
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.form {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+section {
     height: 100vh;
+    width: 100%;
+    background-color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-    background-color: aqua;
-}
 
-input{
+}
+.cheiform{
+    width: 90%;
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    box-shadow: 0px 0px 20px black;
+    background-color: whitesmoke;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
+.form-group {
+    width: 100%;
+    margin-top: 20px;
+    font-size: 20px;
+
+}
+.form-group input,
+.form-group textarea{
+    width: 100%;
     padding: 5px;
+    font-size: 18px;
+    border: 1px solid rgba(128, 128, 128, 0.199);
+
+}
+textarea {
+    resize:vertical
+}
+button [type = "submit"]{
+    width: 100%;
     border: none;
-    border-bottom: 2px solid black;
+    outline: none;
+    padding: 20px;
+    font-size: 20px;
+    border-radius: 8px;
+    font-family: 'Montserrat';
+    color: rgba(28, 166, 247);
+    text-align: center;
+    cursor: pointer;
+    margin-top: 10px;
+    transition: .3s ease background-color;
 }
-
-button{
-    padding: 7px;
-    background: rgb(46, 42, 42);
+button[type ="sybmit"]:hover{
+    background-color: rgba(rgb(214, 226, 236), green, blue, alpha);
+}
+status{
+    width:90px;
+    max-width: 500px;
+}
+#status.success{
+    background-color: green;
+    animation: status   4s ease ease forwards
+}
+#status.error{
+    background-color: red;
     color: white;
-
+    animation: status   4s ease ease forwards
 }
-.form{
-    flex-direction: column;
+
+@keyframes status{
+    0%{
+        opacity: 1;
+        pointer-events: all;
+    }
+    90%{
+        opacity: 1;
+        pointer-events: all;
+    
+    }
+    100%{
+        opacity: 0;
+        pointer-events: none;
+
+    }
 }
