--- a/style/bootstrap.css
+++ b/style/bootstrap.css
@@ -4260,6 +4260,7 @@ textarea.form-control-lg {
 .card > .card-header + .list-group,
 .card > .list-group + .card-footer {
   border-top: 0;
+  text-align: center;
 }
 
 .card-body {
